@@ -292,17 +292,14 @@ machine_load_rom_bank_from_file( memory_page* bank_map, size_t which,
                                  int page_num, const char *filename,
                                  size_t expected_length, int custom )
 {
-  compat_fd fd;
   int error;
   utils_file rom;
 
-  fd = utils_find_auxiliary_file( filename, UTILS_AUXILIARY_ROM );
-  if( fd == COMPAT_FILE_OPEN_FAILED ) {
+  error = utils_read_auxiliary_file( filename, &rom, UTILS_AUXILIARY_ROM );
+  if( error == -1 ) {
     ui_error( UI_ERROR_ERROR, "couldn't find ROM '%s'", filename );
     return 1;
   }
-  
-  error = utils_read_fd( fd, filename, &rom );
   if( error ) return error;
   
   if( rom.length != expected_length ) {
