@@ -41,6 +41,8 @@ int screenshot_available_scalers( scaler_type scaler );
 int screenshot_scr_write( const char *filename );
 int screenshot_scr_read( const char *filename );
 
+#define STANDARD_SCR_SIZE 6912
+
 extern char screenshot_movie_name[];
 extern char screenshot_movie_file[];
 extern long int screenshot_movie_frame;
