@@ -177,21 +177,19 @@ tape_autoload( libspectrum_machine hardware )
   /* Look for an autoload snap. Try .szx first, then .z80 */
   type = LIBSPECTRUM_ID_SNAPSHOT_SZX;
   snprintf( filename, sizeof(filename), "tape_%s.szx", id );
-  fd = utils_find_auxiliary_file( filename, UTILS_AUXILIARY_LIB );
-  if( fd == COMPAT_FILE_OPEN_FAILED ) {
+  error = utils_read_auxiliary_file( filename, &snap, UTILS_AUXILIARY_LIB );
+  if( error == -1 ) {
     type = LIBSPECTRUM_ID_SNAPSHOT_Z80;
     snprintf( filename, sizeof(filename), "tape_%s.z80", id );
-    fd = utils_find_auxiliary_file( filename, UTILS_AUXILIARY_LIB );
+    error = utils_read_auxiliary_file( filename, &snap, UTILS_AUXILIARY_LIB );
   }
     
   /* If we couldn't find either, give up */
-  if( fd == COMPAT_FILE_OPEN_FAILED ) {
+  if( error == -1 ) {
     ui_error( UI_ERROR_ERROR,
 	      "Couldn't find autoload snap for machine type '%s'", id );
     return 1;
   }
-
-  error = utils_read_fd( fd, filename, &snap );
   if( error ) return error;
 
   error = snapshot_read_buffer( snap.buffer, snap.length, type );
