@@ -46,7 +46,6 @@ static const gint picture_pitch = DISPLAY_ASPECT_WIDTH * 4;
 
 static int dialog_created = 0;
 
-static int read_screen( const char *filename, utils_file *screen );
 static void draw_screen( libspectrum_byte *screen, int border );
 static gint
 picture_expose( GtkWidget *widget, GdkEvent *event, gpointer data );
@@ -62,7 +61,7 @@ gtkui_picture( const char *filename, int border )
 
   if( !dialog_created ) {
 
-    if( read_screen( filename, &screen ) ) {
+    if( utils_read_screen( filename, &screen ) ) {
       return 1;
     }
 
@@ -94,32 +93,6 @@ gtkui_picture( const char *filename, int border )
   }
 
   gtk_widget_show_all( dialog );
-
-  return 0;
-}
-
-static int
-read_screen( const char *filename, utils_file *screen )
-{
-  int error;
-  compat_fd fd;
-
-  fd = utils_find_auxiliary_file( filename, UTILS_AUXILIARY_LIB );
-  if( fd == COMPAT_FILE_OPEN_FAILED ) {
-    ui_error( UI_ERROR_ERROR, "couldn't find keyboard picture ('%s')",
-	      filename );
-    return 1;
-  }
-  
-  error = utils_read_fd( fd, filename, screen );
-  if( error ) return error;
-
-  if( screen->length != 6912 ) {
-    utils_close_file( screen );
-    ui_error( UI_ERROR_ERROR, "keyboard picture ('%s') is not 6912 bytes long",
-	      filename );
-    return 1;
-  }
 
   return 0;
 }
